WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
39727
Style fix in JSEventCustom.cpp
https://bugs.webkit.org/show_bug.cgi?id=39727
Summary
Style fix in JSEventCustom.cpp
Xan Lopez
Reported
2010-05-26 04:34:59 PDT
Style fix in JSEventCustom.cpp
Attachments
Patch
(1.69 KB, patch)
2010-05-26 04:35 PDT
,
Xan Lopez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Xan Lopez
Comment 1
2010-05-26 04:35:53 PDT
Created
attachment 57090
[details]
Patch
Jeremy Orlow
Comment 2
2010-05-26 04:47:28 PDT
Comment on
attachment 57090
[details]
Patch r=me
Xan Lopez
Comment 3
2010-05-26 04:55:40 PDT
Comment on
attachment 57090
[details]
Patch Landed as rr60231.
Xan Lopez
Comment 4
2010-05-26 04:56:06 PDT
Closing.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug